appId: ${MAESTRO_APP_ID}
---
- scroll
- tapOn: 'Instagram'
- 'waitForAnimationToEnd'

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: "Accepter et continuer"
    commands:
      - tapOn: "Accepter et continuer"

- assertVisible:
    id: 'com.android.chrome:id/url_bar'
- tapOn:
    id: 'com.android.systemui:id/back'

- tapOn: 'X'
- waitForAnimationToEnd
- assertVisible:
    id: 'com.android.chrome:id/url_bar'
- tapOn:
    id: 'com.android.systemui:id/back'

- tapOn: 'Tiktok'
- waitForAnimationToEnd
- assertVisible:
    id: 'com.android.chrome:id/url_bar'
- doubleTapOn:
    id: 'com.android.systemui:id/back'

- runFlow: # Fallback si problème de retour
    when:
      visible: 'Bonjour Test-e2e'
    commands:
      - tapOn:
          id: 'Mon profil'

- tapOn: 'Facebook'
- waitForAnimationToEnd
- assertVisible: 'Facebook from Meta'
- tapOn:
    id: 'com.android.systemui:id/back'

- scrollUntilVisible:
    element:
      text: 'Informations personnelles'
    direction: UP
