appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn: 'Cinéma'

- tapOn: "Films à l'affiche"

# TODO(e2e): Attendre que "Catégories soit check"
- tapOn: 'Catégories'

- assertVisible: "Films à l'affiche"

- tapOn: 'Rechercher'
- tapOn:
    id: '.*Voir tous les filtres.*'
- tapOn:
    id: 'FilterRow' # Sélectionne le filtre Duo dans la modale Filtres
    index: 1
- tapOn:
    id: 'Interrupteur limitDuoOfferSearch'
- tapOn: 'Appliquer le filtre'

- tapOn: 'Dates & heures'

- assertVisible: 'Dates & heures'
- tapOn:
    id: 'Interrupteur date'
- tapOn: 'Date précise'

- runFlow: # Si fin du mois permet de passer au mois suivant
    when:
      visible: '30'
    commands:
      - swipe:
          from:
            id: 'android:id/numberpicker_input'
            index: 1
          start: 47%, 73%
          end: 47%, 65%

- runFlow:
    file: ../../subFolder/cloud/commands/SwipeOnDatePicker.yml
- tapOn: 'Valider la date'

- tapOn: 'Appliquer le filtre'
- tapOn: 'Rechercher'
