appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn: 'Livres'

- tapOn: "Romans & littérature"

- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Partout'

- tapOn: 'Catégories'

- tapOn: 'Thriller'
- tapOn: 'Rechercher'

- swipe: # Permet d'éviter les offres gratuite en haut de liste
    from:
      text: Les offres
    direction: UP
