appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Bienvenue sur\_le\_pass\_Culture"
- tapOn: "C’est parti\_!"

- assertVisible: 'Découvre les offres près de chez toi'
- tapOn:
    text: 'Passer' # Androïd
    optional: true
- tapOn:
    text: 'Aller à l’écran suivant' # iOS
    optional: true

- assertVisible: "Pour commencer, peux-tu nous dire ton âge\_?"
- tapOn: 'j’ai 18 ans'

- assertVisible: "À 18 ans, profite de ton pass Culture\_!"
- tapOn: 'Plus tard'

- extendedWaitUntil:
    visible: 
        id: "intersectionObserver"
    timeout: 20000
