appId: ${MAESTRO_APP_ID}
---
- tapOn:
    text: "Livres papier"
    index: 0

- swipe:
   from: 
     id: "tagsContainer"
   direction: UP
    
- assertVisible: À propos
- assertVisible:
    id: Étendre le texte
- scroll


- runFlow:
    when:
      visible: "Changer le lieu de retrait"
    commands:
      - tapOn: 
          text: "Changer le lieu de retrait"
          retryTapIfNoChange: true
      - assertVisible: Lieu de retrait
      - assertVisible: Sélectionner un lieu
      - assertVisible:
          id: offerVenuesList
      - tapOn:
          id: Ne pas sélectionner un autre lieu


- assertVisible: "Copier l’adresse"
- assertVisible: "Voir l’itinéraire"
- assertVisible: "Passe le bon plan\_!"
- assertVisible: "Envoyer par\nSMS"
- assertVisible: "Plus\nd’options"

- back


