appId: ${MAESTRO_APP_ID}
tags:
  - onboarding
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/cookies/AcceptCookies.yml
- assertVisible: "Bienvenue sur\_le\_pass\_Culture"
- tapOn: "C’est parti\_!"

- assertVisible: 'Découvre les offres près de chez toi'
- tapOn: 'Continuer.*'

- runFlow:
    when:
      visible: 'Ne pas autoriser'
    commands:
      - tapOn: "Lorsque vous utilisez l'appli"

- assertVisible: "Pour commencer, peux-tu nous dire ton âge\_?"
- tapOn: 'J’ai 16 ans ou moins'

- assertVisible: "Encore un peu de patience\_!"
- assertVisible: 'Créer un compte'
- tapOn: 'Accéder au catalogue'

- waitForAnimationToEnd

- stopApp
