appId: ${MAESTRO_APP_ID}
tags:
  - onboarding
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/cookies/AcceptCookies.yml
- assertVisible: "Bienvenue sur\_le\_pass\_Culture"
- tapOn: "C’est parti\_!"

- assertVisible: 'Découvre les offres près de chez toi'

- tapOn: 'Continuer.*'

- runFlow:
    when:
      visible: 'Ne pas autoriser'
    commands:
      - tapOn: 'Ne pas autoriser'

- assertVisible: "Pour commencer, peux-tu nous dire ton âge\_?"
- tapOn: 'J’ai 18 ans'

- assertVisible: "À 18 ans, profite de ton pass Culture\_!"
- tapOn: 'Plus tard'

- waitForAnimationToEnd

- stopApp
