appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- tapOn: 'Informations personnelles'

- assertVisible: 'Prénom et nom'
- assertVisible: 'Adresse e-mail'
- assertVisible: 'Numéro de téléphone'
- assertVisible: 'Mot de passe'
- scrollUntilVisible:
    element: 'Supprimer mon compte'
- tapOn: 'Supprimer mon compte'

- repeat:
    while:
      notVisible: "Pourquoi souhaites-tu supprimer ton compte\_?"
    commands:
      - doubleTapOn: 'Supprimer mon compte'
- assertVisible: "Pourquoi souhaites-tu supprimer ton compte\_?"

- tapOn: 'J’aimerais créer un compte avec une adresse e-mail différente'

- assertVisible: 'Modifie ton adresse e-mail sur ce compte'
- tapOn: 'J’ai compris'
- assertVisible: 'Modifier mon e-mail'
- assertVisible: 'Valider la demande de modification de mon e-mail'
- tapOn: 'Revenir en arrière'

- tapOn: 'Je n’utilise plus l’application'
- runFlow: ../common/assertions/DeletionNotAllowed.yml

- tapOn: 'Je n’ai plus de crédit ou très peu de crédit restant'
- runFlow: ../common/assertions/DeletionNotAllowed.yml

- tapOn: 'Je souhaite supprimer mes données personnelles'
- runFlow: ../common/assertions/DeletionNotAllowed.yml

- scrollUntilVisible:
    element: 'Autre'

- tapOn: 'Autre'
- assertVisible: 'Contacte le support'
- assertVisible: 'Contacter le support'
- tapOn: 'Retourner au profil'

- runFlow: ../common/lifecycle/StopApp.yml
