appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element: 'Partager le pass Culture'

- tapOn:
    text: 'Informations légales'

- assertVisible: 'Informations légales'
- tapOn:
    id: 'Conditions Générales d’Utilisation - Lien externe'
- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    file: ../common/navigation/DoubleTapOnBack.yml
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'
      - tapOn: 'Revenir en arrière'
      - scrollUntilVisible:
          element: 'Partager le pass Culture'

- runFlow: # Fallback si problème de retour
    when:
      visible: 'Autres'
    commands:
      - tapOn:
          text: 'Informations légales'

- tapOn: 'Charte des données personnelles - Lien externe'
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    file: ../common/navigation/DoubleTapOnBack.yml
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'
      - tapOn: 'Revenir en arrière'
      - scrollUntilVisible:
          element: 'Partager le pass Culture'

- runFlow: ../common/lifecycle/StopApp.yml
